# unihttp-openapi-generator

./: LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
examples/: .gitignore  README.md  run_all.py
examples/frankfurter/frankfurter_library/: README.md  pyproject.toml
examples/frankfurter/frankfurter_library/frankfurter_client/: __init__.py  _forward_refs.py  _serialization.py  client.py  exceptions.py
examples/frankfurter/frankfurter_library/frankfurter_client/methods/: __init__.py
examples/frankfurter/frankfurter_library/frankfurter_client/methods/default/: __init__.py  get_currencies.py  get_latest_rates.py  get_rates_for_date.py  get_time_series.py  get_time_series_to_now.py
examples/frankfurter/frankfurter_library/frankfurter_client/models/: __init__.py  currency_map.py  exchange_rates.py  time_series_rates.py
examples/frankfurter/frankfurter_runners/: pyproject.toml  rates_demo.py
examples/jsonplaceholder/jsonplaceholder_library/: README.md  pyproject.toml
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/: __init__.py  _forward_refs.py  _serialization.py  client.py  exceptions.py
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/methods/: __init__.py
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/methods/comments/: __init__.py  list_comments.py
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/methods/posts/: __init__.py  create_post.py  delete_post.py  get_post.py  get_post_comments.py  list_posts.py  update_post.py
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/methods/todos/: __init__.py  get_todo.py  list_todos.py
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/methods/users/: __init__.py  get_user.py  list_users.py
examples/jsonplaceholder/jsonplaceholder_library/jsonplaceholder_client/models/: __init__.py  address.py  comment.py  company.py  geo.py  post.py  todo.py  user.py
examples/jsonplaceholder/jsonplaceholder_runners/: crud_demo.py  pyproject.toml
examples/open_meteo/open_meteo_library/: README.md  pyproject.toml
examples/open_meteo/open_meteo_library/open_meteo_client/: __init__.py  _forward_refs.py  _serialization.py  client.py  exceptions.py
examples/open_meteo/open_meteo_library/open_meteo_client/methods/: __init__.py
examples/open_meteo/open_meteo_library/open_meteo_client/methods/default/: __init__.py  get_forecast.py
examples/open_meteo/open_meteo_library/open_meteo_client/models/: __init__.py  current_weather.py  forecast.py  hourly_forecast.py
examples/open_meteo/open_meteo_runners/: pyproject.toml  weather_demo.py
tests/: conftest.py  test_behavior.py  test_builder.py  test_builder_edges.py  test_clients_extra.py  test_compile_gate.py  test_config.py  test_config_extra.py  test_config_file.py  test_deferred_features.py  test_emit.py  test_refs.py  (+15 more)
(+49 files in other folders)
