[project]
name = "frankfurter-client"
version = "0.0.0"
description = "Generated unihttp client for Frankfurter API"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b12",
    "httpx>=0.28.1",
    "unihttp>=0.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frankfurter_client"]
