[project]
name = "frankfurter-runners"
version = "0.0.0"
description = "Runnable demo + assertions for the generated Frankfurter client"
requires-python = ">=3.12"
dependencies = ["frankfurter-client"]

# The runner depends on the generated library next door, wired as an editable
# path source so `uv run` resolves it without any sys.path hacks.
[tool.uv.sources]
frankfurter-client = { path = "../frankfurter_library", editable = true }
