[project]
name = "jsonplaceholder-client"
version = "0.0.0"
description = "Generated unihttp client for JSONPlaceholder"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b12",
    "requests>=2.32.0",
    "unihttp>=0.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jsonplaceholder_client"]
