[project]
name = "open-meteo-client"
version = "0.0.0"
description = "Generated unihttp client for Open-Meteo Forecast API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.18.0",
    "unihttp>=0.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_meteo_client"]
